[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Story1/StoneBase.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Story1/StoneBase.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 5.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 6 )

[node name="StoneBase" type="Node2D"]
script = ExtResource( 2 )
npc_name = "StoneHome"
file = "thanks"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="ApplePicker" type="Area2D" parent="."]
position = Vector2( 0, -15 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ApplePicker"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -5 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[connection signal="body_entered" from="ApplePicker" to="." method="_on_ApplePicker_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
